--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
     <div class="div-a">
         <p>a</p>
-    </div>
+    </div><div class="bcdefghi">
     <div class="div-b">
         <p>b</p>
     </div>
